--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -28,16 +28,16 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      const viewer = new Cesium.Viewer("cesiumContainer");{
-baseLayerPicker:true,
-timeline:true,
-animation:false,
-homeBotton:true,
-vrButton:false,
-geocoder:true,
-sceneModePicker:false,
-navigationHelpeButton:true
-});
+      var viewer = new Cesium.Viewer("cesiumContainer");{
+          baseLayerPicker:true,
+          timeline:true,
+          animation:false,
+          homeBotton:true,
+          vrButton:false,
+          geocoder:true,
+          sceneModePicker:false,
+          navigationHelpeButton:true
+      });
     </script>
   </body>
 </html>
