--- a/Apps/HelloWorld2.html
+++ b/Apps/HelloWorld2.html
@@ -28,11 +28,11 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      var viewer = new Cesium.Viewer("cesiumContainer");{
-          baseLayerPicker:true,
-          timeline:true,
-          animation:false,
-          homeBotton:true,
+      var viewer = new Cesium.Viewer('cesiumContainer', {
+          baseLayerPicker: true,
+          timeline: true,
+          animation: false,
+          homeBotton: true,
           vrButton:false,
           geocoder:true,
           sceneModePicker:false,
