--- a/Apps/HelloWorld8.html
+++ b/Apps/HelloWorld8.html
@@ -32,19 +32,18 @@
 
       var polygon = viewer.entities.add({
           name:"東京都庁",
-          description:ここは東京都庁です。",
+          description:"ここは東京都庁です。",
           polygon : {
               hierarchy : Cesium.Cartesian3.fromDegreesArrayHeights([
                   139.69163740881, 35.68903147599, 0,
                   139.69143377086, 35.68993508559, 0,
-                  139.69203616751, 35.68909180654, 0])
-              heightReference: Cesium.HeightReference.RELATIVE_TO_GROUND,
+                  139.69184361318, 35.68999687609, 0,
+                  139.69203616751, 35.68909180654, 0]),
               extrudedHeight: 200.0,
-              extrudedHeightReference: Cesium.HeightReference.RELATIVE_TO_GROUND,
               material : Cesium.Color.RED.withAlpha(0.5),
               outline : true,
-              outlineColor : Cesium.Color.BLACK
-          }
+              outlineColor : Cesium.Color.BLACK,
+          },
       });
 
       var label = viewer.entities.add({
