--- a/Apps/chino_3dtiles2.html
+++ b/Apps/chino_3dtiles2.html
@@ -51,7 +51,7 @@
             roll : 0.0
           }
         });
-      }).otherwise(function(error) {
+      } catch (error) {
         console.log(Failed to load tileset: ${error}`);
       }
       })();
