--- a/Apps/HelloWorld9.html
+++ b/Apps/HelloWorld9.html
@@ -28,8 +28,8 @@
   <body>
     <div id="cesiumContainer"></div>
     <script>
-      var viewer = new Cesium.Viewer("cesiumContainer",{
-          terrainProvider: Cesium.createWorldTerrain()
+      var viewer = new Cesium.Viewer("cesiumContainer"),{
+          terrainProvider: await Cesium.createWorldTerrainAsync()
       });
 
       viewer.homeButton.viewModel.command.beforeExecute.addEventListener(
@@ -89,6 +89,11 @@
               roll : 0.0
           }
       });
+
+        } catch (error) {
+          console.log(`Failed to load tileset: ${error}`);
+        }
+      })();
 
     </script>
   </body>
